{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 7,
  "lineage": "a28a92de-89fa-21b3-ee3c-bb5f152b72a0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-06-11T12:31:49.933-07:00",
            "deny": [],
            "description": "Autorise toutes les communications de nœud à nœud au sein du VPC",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-internal",
            "log_config": [],
            "name": "k8s-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
            "priority": 1000,
            "project": "project-0209a452-648a-426d-a7b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k3s_api",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-11T12:31:49.894-07:00",
            "deny": [],
            "description": "Autorise l'accès à l'API Server Kubernetes de K3s (Port 6443) depuis l'extérieur",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-k3s-api",
            "log_config": [],
            "name": "k8s-allow-k3s-api",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
            "priority": 1000,
            "project": "project-0209a452-648a-426d-a7b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-k3s-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-11T12:31:49.762-07:00",
            "deny": [],
            "description": "Autorise les connexions SSH externes sur le port 22",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-ssh",
            "log_config": [],
            "name": "k8s-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
            "priority": 1000,
            "project": "project-0209a452-648a-426d-a7b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "3000",
                  "4040",
                  "8080",
                  "9870",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-11T12:31:49.244-07:00",
            "deny": [],
            "description": "Autorise les flux HTTP, HTTPS, Grafana (3000) et la plage de ports NodePort de Kubernetes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-web",
            "log_config": [],
            "name": "k8s-allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
            "priority": 1000,
            "project": "project-0209a452-648a-426d-a7b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/firewalls/k8s-allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Nœud Master (Control Plane) du cluster Kubernetes",
            "enable_display": false,
            "id": "projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-master",
            "instance_id": "532223159119033296",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCbrUBgXXtGU3vhqmnrip6vPJJ7EsIz8pB5yEcqj9WkI4sdb+5jWTEdMcM0UK2M+vXSFCfFXCXHmxoQzM/4Uob4Gtl280jyZghOvjOue982WURXC8IX5DujSiMVrxR08SvYsx0QYv80aHIcyJaGt6E/bSG+DlJhmQK5PwBmwAFmoVYHB51ocIsucJw5135xuh2Yte7V4W6pSmtTWi2W+L64psOg6KvqXFBVpnLxDc5P4xP2SAZ6iH4H6E/+sIa7VLikDGCipRwAawtbteHBKKlcaHZnxKArXgU+oGV4d4yuRMnWBxX+q833K7rFudOfplr1pZl4gRId01Vwb0rvCO3Bix02rHd188ZWjHR3YhdxklneLTed3Bo/k6lkAjaVpS0+oJ47chTabuQyItoCJJuo/D21sPEPi2Ry/0FRCmZIK1 [...]
            },
            "metadata_fingerprint": "qIWfGGLa_aw=",
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.93.127",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
                "network_ip": "10.0.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/regions/europe-west9/subnetworks/k8s-subnet",
                "subnetwork_project": "project-0209a452-648a-426d-a7b"
              }
            ],
            "project": "project-0209a452-648a-426d-a7b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-master",
              "k8s-node"
            ],
            "tags_fingerprint": "rsXtL5znszo=",
            "zone": "europe-west9-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitor",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260612",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/disks/k8s-monitor"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Nœud dédié au monitoring (Prometheus/Grafana), isolé des nœuds Spark/HDFS",
            "enable_display": false,
            "id": "projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-monitor",
            "instance_id": "5964284326636889541",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCbrUBgXXtGU3vhqmnrip6vPJJ7EsIz8pB5yEcqj9WkI4sdb+5jWTEdMcM0UK2M+vXSFCfFXCXHmxoQzM/4Uob4Gtl280jyZghOvjOue982WURXC8IX5DujSiMVrxR08SvYsx0QYv80aHIcyJaGt6E/bSG+DlJhmQK5PwBmwAFmoVYHB51ocIsucJw5135xuh2Yte7V4W6pSmtTWi2W+L64psOg6KvqXFBVpnLxDc5P4xP2SAZ6iH4H6E/+sIa7VLikDGCipRwAawtbteHBKKlcaHZnxKArXgU+oGV4d4yuRMnWBxX+q833K7rFudOfplr1pZl4gRId01Vwb0rvCO3Bix02rHd188ZWjHR3YhdxklneLTed3Bo/k6lkAjaVpS0+oJ47chTabuQyItoCJJuo/D21sPEPi2Ry/0FRCmZIK1 [...]
            },
            "metadata_fingerprint": "qIWfGGLa_aw=",
            "name": "k8s-monitor",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.255.14",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
                "network_ip": "10.0.1.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/regions/europe-west9/subnetworks/k8s-subnet",
                "subnetwork_project": "project-0209a452-648a-426d-a7b"
              }
            ],
            "project": "project-0209a452-648a-426d-a7b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-monitor",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-monitor",
              "k8s-node"
            ],
            "tags_fingerprint": "ipiwDCmzGEI=",
            "zone": "europe-west9-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_instance.master",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/disks/k8s-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Nœud Worker 1 du cluster Kubernetes",
            "enable_display": false,
            "id": "projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-worker-1",
            "instance_id": "21372550567605157",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCbrUBgXXtGU3vhqmnrip6vPJJ7EsIz8pB5yEcqj9WkI4sdb+5jWTEdMcM0UK2M+vXSFCfFXCXHmxoQzM/4Uob4Gtl280jyZghOvjOue982WURXC8IX5DujSiMVrxR08SvYsx0QYv80aHIcyJaGt6E/bSG+DlJhmQK5PwBmwAFmoVYHB51ocIsucJw5135xuh2Yte7V4W6pSmtTWi2W+L64psOg6KvqXFBVpnLxDc5P4xP2SAZ6iH4H6E/+sIa7VLikDGCipRwAawtbteHBKKlcaHZnxKArXgU+oGV4d4yuRMnWBxX+q833K7rFudOfplr1pZl4gRId01Vwb0rvCO3Bix02rHd188ZWjHR3YhdxklneLTed3Bo/k6lkAjaVpS0+oJ47chTabuQyItoCJJuo/D21sPEPi2Ry/0FRCmZIK1 [...]
            },
            "metadata_fingerprint": "qIWfGGLa_aw=",
            "name": "k8s-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.163.51.166",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
                "network_ip": "10.0.1.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/regions/europe-west9/subnetworks/k8s-subnet",
                "subnetwork_project": "project-0209a452-648a-426d-a7b"
              }
            ],
            "project": "project-0209a452-648a-426d-a7b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node",
              "k8s-worker"
            ],
            "tags_fingerprint": "wpaiaGk_G58=",
            "zone": "europe-west9-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_instance.master",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/disks/k8s-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Nœud Worker 2 du cluster Kubernetes",
            "enable_display": false,
            "id": "projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-worker-2",
            "instance_id": "114942407430550437",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCbrUBgXXtGU3vhqmnrip6vPJJ7EsIz8pB5yEcqj9WkI4sdb+5jWTEdMcM0UK2M+vXSFCfFXCXHmxoQzM/4Uob4Gtl280jyZghOvjOue982WURXC8IX5DujSiMVrxR08SvYsx0QYv80aHIcyJaGt6E/bSG+DlJhmQK5PwBmwAFmoVYHB51ocIsucJw5135xuh2Yte7V4W6pSmtTWi2W+L64psOg6KvqXFBVpnLxDc5P4xP2SAZ6iH4H6E/+sIa7VLikDGCipRwAawtbteHBKKlcaHZnxKArXgU+oGV4d4yuRMnWBxX+q833K7rFudOfplr1pZl4gRId01Vwb0rvCO3Bix02rHd188ZWjHR3YhdxklneLTed3Bo/k6lkAjaVpS0+oJ47chTabuQyItoCJJuo/D21sPEPi2Ry/0FRCmZIK1 [...]
            },
            "metadata_fingerprint": "qIWfGGLa_aw=",
            "name": "k8s-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.93.9",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
                "network_ip": "10.0.1.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/regions/europe-west9/subnetworks/k8s-subnet",
                "subnetwork_project": "project-0209a452-648a-426d-a7b"
              }
            ],
            "project": "project-0209a452-648a-426d-a7b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/zones/europe-west9-b/instances/k8s-worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node",
              "k8s-worker"
            ],
            "tags_fingerprint": "wpaiaGk_G58=",
            "zone": "europe-west9-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_instance.master",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Réseau VPC dédié pour le cluster Kubernetes K3s",
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
            "mtu": 0,
            "name": "k8s-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2543912869071074273",
            "project": "project-0209a452-648a-426d-a7b",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-11T12:31:52.123-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/project-0209a452-648a-426d-a7b/regions/europe-west9/subnetworks/k8s-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/global/networks/k8s-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-0209a452-648a-426d-a7b",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0209a452-648a-426d-a7b/regions/europe-west9/subnetworks/k8s-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}